Initial Commit, many fixups and todos remain

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,7 +104,26 @@
         "shared_mutex": "cpp",
         "thread": "cpp",
         "simd": "cpp",
-        "concepts": "cpp"
+        "concepts": "cpp",
+        "format": "cpp",
+        "source_location": "cpp",
+        "stop_token": "cpp",
+        "xfacet": "cpp",
+        "xhash": "cpp",
+        "xiosbase": "cpp",
+        "xlocale": "cpp",
+        "xlocbuf": "cpp",
+        "xlocinfo": "cpp",
+        "xlocmes": "cpp",
+        "xlocmon": "cpp",
+        "xlocnum": "cpp",
+        "xloctime": "cpp",
+        "xmemory": "cpp",
+        "xstddef": "cpp",
+        "xstring": "cpp",
+        "xtr1common": "cpp",
+        "xtree": "cpp",
+        "xutility": "cpp"
     },
     "C_Cpp.errorSquiggles": "Enabled",
     "C_Cpp.codeAnalysis.clangTidy.checks.enabled": [
@@ -112,12 +131,16 @@
     ],
     "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
         "llvm-include-order",
+        "llvm-namespace-comment",
+        "google-readability-namespace-comments",
         "llvmlibc-*",
         "fuchsia-*",
+        "altera-*",
         "modernize-use-trailing-return-type",
         "readability-avoid-const-params-in-decls",
         "cppcoreguidelines-macro-usage"
     ],
+    "C_Cpp.codeAnalysis.clangTidy.headerFilter": "${workspaceFolder}.+(?:include|src).+hpp",
     "C_Cpp.default.cppStandard": "c++20",
     "C_Cpp.default.cStandard": "c17",
     "C_Cpp.loggingLevel": "Debug",
@@ -125,5 +148,10 @@
     "C_Cpp.vcFormat.newLine.beforeOpenBrace.function": "sameLine",
     "C_Cpp.vcFormat.newLine.beforeOpenBrace.block": "sameLine",
     "C_Cpp.vcFormat.newLine.closeBraceSameLine.emptyType": true,
-    "C_Cpp.codeAnalysis.clangTidy.enabled": true
+    "C_Cpp.codeAnalysis.clangTidy.enabled": true,
+    "C_Cpp.codeAnalysis.clangTidy.args": [
+        "-p",
+        "./build"
+    ],
+    "C_Cpp.default.compileCommands": "build/compile_commands"
 }
