--- a/.github/workflows/build-ndk.yml
+++ b/.github/workflows/build-ndk.yml
@@ -75,14 +75,14 @@ jobs:
     - name: Prepare Clang Tidy Suggestions
       if: ${{ github.event_name == 'pull_request' }}
       run: cmake -G "Ninja" -DCMAKE_BUILD_TYPE="RelWithDebInfo" -DTEST_BUILD=1 -B build
-      id: prepare_compile_flags
 
     - name: Clang Tidy Suggestions
       if: ${{ github.event_name == 'pull_request' }}
       uses: ZedThree/clang-tidy-review@v0.7.0
       id: review
       # If there are any comments, don't build
-    - if: ${{ github.event_name == 'pull_request' }} && steps.review.outputs.total_comments > 0
+    - name: Clang Tidy Exit
+      if: ${{ github.event_name == 'pull_request' }} && steps.review.outputs.total_comments > 0
       run: exit 1
     
     - name: Build
