--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,23 @@ include(qpm_defines.cmake)
 
 cmake_minimum_required(VERSION 3.22)
 project(${COMPILE_ID})
+# Get GSL
+include(FetchContent)
+
+FetchContent_Declare(GSL
+    GIT_REPOSITORY "https://github.com/microsoft/GSL"
+    GIT_TAG "v4.0.0"
+)
+
+FetchContent_MakeAvailable(GSL)
+
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
 
 # c++ standard
 set(CMAKE_CXX_STANDARD 20)
@@ -13,9 +30,9 @@ set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 # compile options used
-add_compile_options(-frtti -fPIE -fPIC -fexceptions)
-add_compile_definitions(MOD_VERSION=\"${MOD_VERSION}\")
-add_compile_definitions(MOD_ID=\"${MOD_ID}\")
+add_compile_options(-frtti -flto -fPIE -fPIC -fexceptions)
+add_compile_definitions(MOD_VERSION="${MOD_VERSION}")
+add_compile_definitions(MOD_ID="${MOD_ID}")
 # add_compile_options(-Wall -Wextra -Werror -Wpedantic)
 # compile definitions used
 
@@ -52,7 +69,7 @@ target_include_directories(${COMPILE_ID} PRIVATE ${INCLUDE_DIR})
 # add shared dir as include dir
 target_include_directories(${COMPILE_ID} PUBLIC ${SHARED_DIR})
 
-target_link_libraries(${COMPILE_ID} PRIVATE -llog)
+target_link_libraries(${COMPILE_ID} PRIVATE -llog GSL)
 
 include(extern.cmake)
 MESSAGE(STATUS "extern added!")
@@ -71,3 +88,19 @@ add_custom_command(TARGET ${COMPILE_ID} POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E rename stripped_lib${COMPILE_ID}.so lib${COMPILE_ID}.so
             COMMENT "Rename the stripped lib to regular"
             )
+
+enable_testing()
+
+add_compile_options(-Wall -Wextra -Werror -Wpedantic)
+add_executable(
+    test
+    test/main.cpp
+)
+target_include_directories(test PUBLIC ${SHARED_DIR})
+target_link_libraries(
+    test
+    GTest::gtest_main
+)
+
+include(GoogleTest)
+gtest_discover_tests(test)
