Swap to fmt logs, ensure compilation of trampoline

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,22 +4,22 @@ include(qpm_defines.cmake)
 cmake_minimum_required(VERSION 3.22)
 project(${COMPILE_ID})
 # Get GSL
-include(FetchContent)
+# include(FetchContent)
 
-FetchContent_Declare(GSL
-    GIT_REPOSITORY "https://github.com/microsoft/GSL"
-    GIT_TAG "v4.0.0"
-)
+# FetchContent_Declare(GSL
+#     GIT_REPOSITORY "https://github.com/microsoft/GSL"
+#     GIT_TAG "v4.0.0"
+# )
 
-FetchContent_MakeAvailable(GSL)
+# FetchContent_MakeAvailable(GSL)
 
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
-)
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
+# FetchContent_Declare(
+#   googletest
+#   URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+# )
+# # For Windows: Prevent overriding the parent project's compiler/linker settings
+# set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+# FetchContent_MakeAvailable(googletest)
 
 # c++ standard
 set(CMAKE_CXX_STANDARD 20)
@@ -30,10 +30,12 @@ set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 # compile options used
-add_compile_options(-frtti -flto -fPIE -fPIC -fexceptions)
+add_compile_options(-fno-rtti -flto -fPIE -fPIC -fno-exceptions -fcolor-diagnostics)
 add_compile_definitions(MOD_VERSION="${MOD_VERSION}")
 add_compile_definitions(MOD_ID="${MOD_ID}")
-# add_compile_options(-Wall -Wextra -Werror -Wpedantic)
+# TODO: For now, this is the only safe way we can build a binary
+add_compile_definitions(FLAMINGO_HEADER_ONLY)
+add_compile_options(-Wall -Wextra -Werror -Wpedantic)
 # compile definitions used
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -48,9 +50,9 @@ add_library(
 )
 
 # recursively get all src files
-RECURSE_FILES(cpp_file_list_utils ${SOURCE_DIR}/*.cpp)
+# RECURSE_FILES(cpp_file_list_utils ${SOURCE_DIR}/*.cpp)
 # RECURSE_FILES(c_file_list_utils ${SOURCE_DIR}/*.c)
-target_sources(${COMPILE_ID} PRIVATE ${cpp_file_list_utils})
+target_sources(${COMPILE_ID} PRIVATE ${SOURCE_DIR}/trampoline.cpp ${SOURCE_DIR}/trampoline-allocator.cpp)
 # target_sources(${COMPILE_ID} PRIVATE ${c_file_list_utils})
 
 # if (DEFINED TEST_BUILD)
@@ -68,8 +70,7 @@ target_include_directories(${COMPILE_ID} PRIVATE ${SOURCE_DIR})
 target_include_directories(${COMPILE_ID} PRIVATE ${INCLUDE_DIR})
 # add shared dir as include dir
 target_include_directories(${COMPILE_ID} PUBLIC ${SHARED_DIR})
-
-target_link_libraries(${COMPILE_ID} PRIVATE -llog GSL)
+target_link_libraries(${COMPILE_ID} PRIVATE -llog)
 
 include(extern.cmake)
 MESSAGE(STATUS "extern added!")
@@ -92,15 +93,15 @@ add_custom_command(TARGET ${COMPILE_ID} POST_BUILD
 enable_testing()
 
 add_compile_options(-Wall -Wextra -Werror -Wpedantic)
-add_executable(
-    test
-    test/main.cpp
-)
-target_include_directories(test PUBLIC ${SHARED_DIR})
-target_link_libraries(
-    test
-    GTest::gtest_main
-)
+# add_executable(
+#     test
+#     test/main.cpp
+# )
+# target_include_directories(test PUBLIC ${SHARED_DIR})
+# target_link_libraries(
+#     test
+#     GTest::gtest_main
+# )
 
-include(GoogleTest)
-gtest_discover_tests(test)
+# include(GoogleTest)
+# gtest_discover_tests(test)
