--- a/.github/workflows/build-ndk.yml
+++ b/.github/workflows/build-ndk.yml
@@ -30,6 +30,10 @@ jobs:
           version: latest
           platform: x64
 
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.8'
+
       # Get QPM so we can bring in dependencies
       - name: QPM Rust Action
         uses: Fernthedev/qpm-action@v1
