--- a/.github/workflows/build-ndk.yml
+++ b/.github/workflows/build-ndk.yml
@@ -69,6 +69,7 @@ jobs:
       # Upload test artifact
       - name: Upload test artifact
         uses: actions/upload-artifact@v2
+        if: always()
         with:
           name: test_output.txt
           path: ./build-linux/test-output.txt
