--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,4 @@
-# include some defines automatically made by qpm
-include(qpm_defines.cmake)
-
 cmake_minimum_required(VERSION 3.22)
-project(${COMPILE_ID})
-# Get GSL
-# include(FetchContent)
-
-# FetchContent_Declare(GSL
-#     GIT_REPOSITORY "https://github.com/microsoft/GSL"
-#     GIT_TAG "v4.0.0"
-# )
-
-# FetchContent_MakeAvailable(GSL)
-
-# FetchContent_Declare(
-#   googletest
-#   URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
-# )
-# # For Windows: Prevent overriding the parent project's compiler/linker settings
-# set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-# FetchContent_MakeAvailable(googletest)
 
 # c++ standard
 set(CMAKE_CXX_STANDARD 20)
@@ -28,80 +7,48 @@ set(CMAKE_CXX_STANDARD_REQUIRED 20)
 # define that stores the actual source directory
 set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
+set(EXTERN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/extern)
+set(SHARED_DIR ${CMAKE_CURRENT_SOURCE_DIR}/shared)
 
-# compile options used
-add_compile_options(-fno-rtti -flto -fPIE -fPIC -fno-exceptions -fcolor-diagnostics)
-add_compile_definitions(MOD_VERSION="${MOD_VERSION}")
-add_compile_definitions(MOD_ID="${MOD_ID}")
-# TODO: For now, this is the only safe way we can build a binary
-add_compile_definitions(FLAMINGO_HEADER_ONLY)
-add_compile_options(-Wall -Wextra -Werror -Wpedantic)
-# compile definitions used
+if (NOT DEFINED CMAKE_BUILD_TYPE)
+	set(CMAKE_BUILD_TYPE "Debug")
+endif()
+
+add_compile_options(-fno-rtti -fPIE -fPIC -fno-exceptions -fcolor-diagnostics)
+add_link_options(-lstdc++ -lm)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-if (DEFINED TEST_BUILD)
-    MESSAGE(STATUS "Compiling with test defines")
+# Flamingo static build always exists
+add_library(flamingo-static ${SOURCE_DIR}/fixups.cpp ${SOURCE_DIR}/installer.cpp ${SOURCE_DIR}/page-allocator.cpp)
+target_compile_options(flamingo-static PRIVATE -Wall -Wextra -Werror -Wpedantic -DFMT_HEADER_ONLY)
+
+option(TEST_BUILD "Enable local executable test builds for sanity checks" ON)
+
+# If we are making a test build, go into this block instead
+if (TEST_BUILD)
+    project(flamingo-test)
+
+    # Fetcj capstone (v5.0.1) via: pip install capstone==5.0.1 -U --user
+    include(FetchContent)
+    FetchContent_Declare(
+        capstone
+        GIT_REPOSITORY https://github.com/capstone-engine/capstone.git
+        GIT_TAG 5.0.1
+    )
+
+    set(CAPSTONE_ARCHITECTURE_DEFAULT OFF)
+    set(CAPSTONE_ARM64_SUPPORT ON)
+
+    FetchContent_MakeAvailable(capstone)
+    target_link_libraries(flamingo-static PUBLIC capstone)
+    target_include_directories(flamingo-static PUBLIC ${SHARED_DIR} ${capstone_SOURCE_DIR}/include ${EXTERN_DIR}/includes/fmt/fmt/include)
+
+    add_compile_definitions(TEST_BUILD)
+    MESSAGE(STATUS "Compiling test build")
+
+    add_executable(fixup-test ${CMAKE_CURRENT_SOURCE_DIR}/test/main.cpp)
+    target_link_libraries(fixup-test PRIVATE flamingo-static)
+else()
+    MESSAGE(ERROR "No NDK support yet! Try using -DTEST_BUILD=ON")
 endif()
-
-add_library(
-    ${COMPILE_ID} 
-    SHARED 
-)
-
-# recursively get all src files
-# RECURSE_FILES(cpp_file_list_utils ${SOURCE_DIR}/*.cpp)
-# RECURSE_FILES(c_file_list_utils ${SOURCE_DIR}/*.c)
-target_sources(${COMPILE_ID} PRIVATE ${SOURCE_DIR}/trampoline/trampoline.cpp ${SOURCE_DIR}/trampoline/trampoline-allocator.cpp)
-# target_sources(${COMPILE_ID} PRIVATE ${c_file_list_utils})
-
-# if (DEFINED TEST_BUILD)
-# RECURSE_FILES(cpp_file_list_tests ${SOURCE_DIR}/tests/*.cpp)
-# RECURSE_FILES(c_file_list_tests ${SOURCE_DIR}/tests/*.c)
-# target_sources(${COMPILE_ID} PRIVATE ${cpp_file_list_tests})
-# target_sources(${COMPILE_ID} PRIVATE ${c_file_list_tests})
-# endif()
-
-# add root dir as include dir
-target_include_directories(${COMPILE_ID} PRIVATE ${CMAKE_SOURCE_DIR})
-# add src dir as include dir
-target_include_directories(${COMPILE_ID} PRIVATE ${SOURCE_DIR})
-# add include dir as include dir
-target_include_directories(${COMPILE_ID} PRIVATE ${INCLUDE_DIR})
-# add shared dir as include dir
-target_include_directories(${COMPILE_ID} PUBLIC ${SHARED_DIR})
-target_link_libraries(${COMPILE_ID} PRIVATE -llog)
-
-include(extern.cmake)
-MESSAGE(STATUS "extern added!")
-
-add_custom_command(TARGET ${COMPILE_ID} POST_BUILD
-            COMMAND ${CMAKE_STRIP} -g -S -d --strip-all
-            "lib${COMPILE_ID}.so" -o "stripped_lib${COMPILE_ID}.so"
-            COMMENT "Strip debug symbols done on final binary.")
-
-add_custom_command(TARGET ${COMPILE_ID} POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E rename lib${COMPILE_ID}.so debug_lib${COMPILE_ID}.so
-            COMMENT "Rename the lib to debug_ since it has debug symbols"
-            )
-
-add_custom_command(TARGET ${COMPILE_ID} POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E rename stripped_lib${COMPILE_ID}.so lib${COMPILE_ID}.so
-            COMMENT "Rename the stripped lib to regular"
-            )
-
-enable_testing()
-
-add_compile_options(-Wall -Wextra -Werror -Wpedantic)
-# add_executable(
-#     test
-#     test/main.cpp
-# )
-# target_include_directories(test PUBLIC ${SHARED_DIR})
-# target_link_libraries(
-#     test
-#     GTest::gtest_main
-# )
-
-# include(GoogleTest)
-# gtest_discover_tests(test)
