Add api.cpp simple test to CMake and CI

--- a/.github/workflows/build-ndk.yml
+++ b/.github/workflows/build-ndk.yml
@@ -62,8 +62,20 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: test_output.txt
+          name: test-output.txt
           path: ./build/test-output.txt
+          if-no-files-found: error
+
+      - name: Run API test
+        run: ./build/api-test 2>&1 | tee ./build/api-test-output.txt
+
+      # Upload test artifact
+      - name: Upload test artifact
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: api-test-output.txt
+          path: ./build/api-test-output.txt
           if-no-files-found: error
   build:
     runs-on: ubuntu-latest
