fixup! Remove PR run events, only do them for push events

--- a/.github/workflows/build-ndk.yml
+++ b/.github/workflows/build-ndk.yml
@@ -92,7 +92,6 @@ jobs:
 
       - name: Create Qmod
         run: |
-          qpm-rust qmod build
           pwsh -Command ./createqmod.ps1 ${{env.qmodName}}
 
       - name: Get Library Name
@@ -114,7 +113,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: debug_${{ steps.libname.outputs.NAME }}
-          path: ./build/debug_${{ steps.libname.outputs.NAME }}
+          path: ./build/debug/${{ steps.libname.outputs.NAME }}
           if-no-files-found: error
 
       - name: Upload qmod artifact
