Remove old publish script, use single source of truth

--- a/.github/workflows/build-ndk.yml
+++ b/.github/workflows/build-ndk.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches-ignore:
       - "version-*"
+    tags:
+      - "v*"
 
 env:
   module_id: flamingo
@@ -113,7 +115,7 @@ jobs:
 
       - name: Make mod.json
         run: |
-          qpm-rust qmod manifest
+          qpm qmod manifest
 
       - name: Build & Create Qmod
         run: |
